# soloprenuership

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PROMPT.md  README.md  UNLOCK.md  VISION.md
ai-memory/: AGENT_HANDOVER.md  README.md
context/: README.md  business-context.md  business-graph.json  customer-voice.md  decision-log.md  experiment-log.md  founder-profile.md  mission.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md  api-intelligence-map.md  claude-setup-optimization-march-2026.md  gap-analysis-march-2026.md  skill-gap-research-v4.md  (+2 more)
mcp/: README.md
mcp/soloos-core/: README.md  SETUP.md  pyproject.toml
mcp/soloos-core/dashboard/: app.py  requirements.txt
mcp/soloos-core/docker/: growthbook-compose.yml  langfuse-compose.yml
mcp/soloos-core/docs/: autonomous-ai-founder-vision.md  autonomous-implementation-spec.md  v10-architecture.md  v10-implementation-spec.md
mcp/soloos-core/docs/setup/: growthbook-setup.md  langfuse-setup.md
mcp/soloos-core/src/soloos_core/: __init__.py  cli.py  kb_loader.py  log_manager.py  server.py
mcp/soloos-core/src/soloos_core/actions/: __init__.py  base_action.py  deploy_action.py  dns_action.py  email_action.py  social_action.py  support_action.py
mcp/soloos-core/src/soloos_core/agent/: __init__.py  executor.py  founder_loop.py  task_queue.py  world_model.py
mcp/soloos-core/src/soloos_core/agents/: __init__.py  crew.py  customer_success_agent.py  engineering_agent.py  founder_agent.py  marketing_agent.py
mcp/soloos-core/src/soloos_core/core/: action_registry.py  audit_log.py  observability.py  scheduler-config-template.yaml  scheduler.py
mcp/soloos-core/src/soloos_core/data/: analytics_db.py  cache.py  context_db.py  growthbook_client.py
mcp/soloos-core/src/soloos_core/data/connectors/: __init__.py  base.py  mercury_connector.py  posthog_connector.py  registry.py  stripe_connector.py
mcp/soloos-core/src/soloos_core/gateway/: http_bridge.py  schema_gen.py  webhook_handler.py
mcp/soloos-core/src/soloos_core/tools/: __init__.py  agents.py  decisions.py  financial.py  intelligence.py  memory.py
mcp/soloos-core/tests/integration/: test_connectors.py  test_webhooks.py
mcp/soloos-core/tests/smoke/: test_server_starts.py
mcp/soloos-core/tests/unit/: test_action_registry.py  test_actions.py  test_analytics_db.py  test_audit_log.py  test_cache.py  test_context_db.py  test_executor.py  test_founder_loop.py  test_observability.py  test_scheduler.py  test_task_queue.py
(+283 files in other folders)
