[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soloos-core"
version = "1.0.0"
description = "SoloOS Core MCP Server — Founder Intelligence Engine for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "solo-founder", "startup", "claude", "ai", "intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.40.0",
    # V10: caching, observability, structured KB parsing
    "diskcache>=5.6.0",
    "structlog>=24.0.0",
    "python-frontmatter>=1.1.0",
    # Phase A: DuckDB analytics store
    "duckdb>=0.10.0",
    # Phase F: background scheduler
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
connectors = [
    "stripe>=7.0.0",
    "httpx>=0.27.0",
    "posthog>=3.0.0",
]
ab-testing = [
    "growthbook>=1.0.0",
]
observability = [
    "langfuse>=2.0.0",
]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
soloos-mcp = "soloos_core.server:main"
soloos-api = "soloos_core.gateway.http_bridge:main"
soloos = "soloos_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soloos_core"]

[tool.hatch.metadata]
allow-direct-references = true
